<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UsuarioActivity">

    <TextView
        android:id="@+id/textSalario"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="22dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/opencadastroconta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDespesas"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="30dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textRestante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRestante"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDespesas" />

    <Button
        android:id="@+id/opencadastroconta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/conta"
        app:layout_constraintBottom_toTopOf="@+id/openeditconta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSalario" />


    <Button
        android:id="@+id/openeditconta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/editar"
        app:layout_constraintBottom_toTopOf="@+id/opendelconta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="222dp"
        app:layout_constraintTop_toBottomOf="@+id/opencadastroconta"/>

    <Button
        android:id="@+id/opendelconta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/deletar"
        app:layout_constraintBottom_toTopOf="@+id/openrelatorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openeditconta" />/>

    <Button
        android:id="@+id/openrelatorio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="375dp"
        android:text="@string/relatorio"
        app:layout_constraintBottom_toTopOf="@+id/textDespesas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opendelconta"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/aviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="518dp"
        android:layout_marginBottom="194dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>