<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exitModalConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="317dp"
            android:layout_marginBottom="87dp"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:src="@drawable/ic_baseline_backspace_24"
            app:layout_constraintBottom_toTopOf="@+id/edit_cod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/DescriptionBntExit" />

        <TextView
            android:id="@+id/CadOrEdit"
            android:layout_width="114dp"
            android:layout_height="50dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="16dp"
            android:text="@string/titleModalCadastrar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_cod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_cod"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:hint="código: "
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_descricao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CadOrEdit"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_descricao"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="Descricão: "
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_valor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_cod"
            tools:ignore="HardcodedText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_valor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Valor: "
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_validade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_descricao"
            tools:ignore="HardcodedText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_validade"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Validade: "
            android:inputType="date"
            android:maxLength="8"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/btcadoredit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_valor"
            tools:ignore="HardcodedText"
            android:autofillHints="" />

        <Button
            android:id="@+id/btcadoredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_valor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>